# sandboxie-docs

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  404.html  README.md  README.zh.md  README.zh_CN.md  README_zh-CN.md  README_zh_CN.md  _config.yml  index.html  mkdocs.yml  mlc_config.json  requirements.txt  search.html  search.json  sitemap.xml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
Content/: AdvancedTopics.html  AdvancedTopics.md  AlertFolder.html  AlertFolder.md  AlertProcess.html  AlertProcess.md  AllPages.html  AllPages.md  AllowRawDiskRead.html  AllowRawDiskRead.md  AllowSpoolerPrintToFile.html  AllowSpoolerPrintToFile.md  AppearanceSettings.html  AppearanceSettings.md  ApplicationsSettings.html  ApplicationsSettings.md  AutoDelete.html  AutoDelete.md  AutoExec.html  AutoExec.md  AutoRecover.html  AutoRecover.md  AutoRecoverIgnore.html  AutoRecoverIgnore.md  BindAdapter.html  BindAdapterIP.html  BlockDrivers.html  BlockDrivers.md  BlockFakeInput.html  BlockFakeInput.md  BlockNetParam.html  BlockNetParam.md  BlockNetworkFiles.html  BlockPassword.html  BlockPassword.md  BlockPort.html  BlockPort.md  BlockScreenCapture.html  BlockSysParam.html  BlockSysParam.md  (+663 more)
DirUrlMix/: plugin.py  pyproject.toml
PlusContent/: BoxEncryption.html  BoxEncryption.md  BoxSnapshots.html  BoxSnapshots.md  DNSFilter.html  DNSFilter.md  Discord.md  EncryptedSandboxes.md  ForceChildProcess.md  Plus-Features.html  Plus-Features.md  ProxySupport.html  ProxySupport.md  QuickRecovery.md  RamDiskSandboxes.md  RamDiskSupport.html  RamDiskSupport.md  TraceLog.md  (+39 more)
(+3317 files in other folders)
