[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DirUrlMix"
version = "0.1"
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

[project.entry-points."mkdocs.plugins"]
DirUrlMix = "DirUrlMix.plugin:DirUrlMix"
